@@ -8,6 +8,7 @@
 	  libxklavier/xklavier_config_xkb.c,
 	  libxklavier/xklavier_dump.c,
 	  libxklavier/xklavier_evt.c,
+	  libxklavier/xklavier_evt_xkb.c,
 	  libxklavier/xklavier_private.h,
 	  libxklavier/xklavier_private_xkb.h,
 	  libxklavier/xklavier_props.c,
